# django-gmailapi-json-backend

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.cfg
gmailapi_backend/: service.py
