[metadata]
name = django-gmailapi-json-backend
version = 1.9
author = Innove
author_email = info@innove.it
description = Email backend for Django which sends email via the Gmail API through a JSON credential
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/innoveit/django-gmailapi-json-backend
project_urls =
    Bug Tracker = https://github.com/innoveit/django-gmailapi-json-backend
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    gmailapi_backend
install_requires =
    django
    google-api-python-client
    google-auth-httplib2
    google-auth-oauthlib
python_requires = >=3.9